# E-commerce-Chatbot

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: chat_bot_api.py
backend/app/components/: html_content.py
backend/app/core/: config.py  logging.py
backend/app/db/: chromaDB.py  postgresdb.py
backend/app/models/: amazon_data_model.py  answer_form.py  chat_bot_model.py
backend/app/resources/: amazon_product_data.csv
backend/app/services/: chat_bot_route.py  chat_bot_service.py  router_search.py  small_talk.py  sql_query.py
database/: amazon_data.sql
frontend/: .env.example  index.html  package-lock.json  package.json  postcss.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/pages/: ChatPage.tsx  HomePage.tsx
web/: amazon_product_data.csv  amazon_product_data_cleaned.csv  amazon_product_data_final.csv  amazon_product_links_camera picture.csv  amazon_product_links_mobile phones.csv  amazon_product_links_shirts.csv  amazon_product_links_shoes.csv  amazon_product_links_watch.csv  amazon_unavailable_products.csv  eda_amazon_product.ipynb  web_scrapping.ipynb
