[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pandas~=2.2.3",
  "chromadb~=1.3.5",
  "dotenv~=0.9.9",
  "google-genai>=1.0.0",
  "groq>=0.11.0",
  "semantic-router>=0.1.12",
  "fastembed>=0.7.4",
  "bytez>=2.0.4",
  "einops>=0.8.1",
  "fastapi[standard]~=0.121.2",
  "uvicorn[standard]",
  "pydantic-settings>=2.12.0",
  "sqlalchemy>=2.0.44",
  "asyncpg>=0.30.0",
  "psycopg2-binary>=2.9.11",
  "langchain>=1.2.0",
  "langchain-groq>=1.1.1",
  "langgraph-checkpoint-postgres>=3.0.2",
  "psycopg[binary,pool]>=3.3.2",
  "langchain-google-genai>=4.1.2",
  "slowapi>=0.1.9",
  "fastembed>=0.7.4",
  "google-generativeai>=0.8.6",
]
